--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -17,10 +17,10 @@
     <string name="notes">Σημειώσεις</string>
     <string name="deleting_folder">Διαγραφή φακέλου \'%s\'</string>
     <string name="none">Χωρίς</string>
-    <string name="label">Label</string>
-    <string name="transparent">Transparent</string>
-    <string name="transparent_color">Transparent color</string>
-    <string name="select_a_different_color">Select a different color</string>
+    <string name="label">Ετικέτα</string>
+    <string name="transparent">Διαφάνεια</string>
+    <string name="transparent_color">Χρώμα διαφάνειας</string>
+    <string name="select_a_different_color">Επιλέξτε διαφορετικό χρώμα</string>
 
     <!-- Favorites -->
     <string name="favorites">Αγαπημένα</string>
@@ -58,8 +58,8 @@
     <string name="filename_invalid_characters_placeholder">Το όνομα \'%s\' περιέχει μη έγκυρους χαρακτήρες</string>
     <string name="extension_cannot_be_empty">Η επέκταση δεν μπορεί να είναι κενή</string>
     <string name="source_file_doesnt_exist">To αρχείο προέλευσης %s δεν υπάρχει</string>
-    <string name="prepend_filenames">Prepend filenames</string>
-    <string name="append_filenames">Append filenames (before file extension)</string>
+    <string name="prepend_filenames">Προεπιλεγμένα ονόματα αρχείων</string>
+    <string name="append_filenames">Προσθέστε ονόματα αρχείων (πρίν την επέκταση)</string>
 
     <!-- Copy / Move -->
     <string name="copy">Αντιγραφή</string>
@@ -102,7 +102,7 @@
     <string name="file_already_exists_overwrite">Το αρχείο \"%s\" υπάρχει ήδη. Αντικατάσταση?</string>
     <string name="folder_already_exists">Ο φάκελος \"%s\" υπάρχει ήδη</string>
     <string name="merge">Συγχώνευση</string>
-    <string name="keep_both">Keep both</string>
+    <string name="keep_both">Κρατήστε και τα δύο</string>
     <string name="overwrite">Αντικατάσταση</string>
     <string name="skip">Παράβλεψη</string>
     <string name="append">Προσάρτηση με \'_1\'</string>
@@ -117,18 +117,18 @@
     <string name="confirm_selection">Επιβεβαιώστε την επιλογή</string>
 
     <plurals name="items">
-        <item quantity="one">%d στοιχείο</item>
+        <item quantity="one">%d στοιχείου</item>
         <item quantity="other">%d στοιχεία</item>
     </plurals>
 
     <!-- Are you sure you want to delete 5 items? -->
     <plurals name="delete_items">
-        <item quantity="one">%d στοιχείο</item>
+        <item quantity="one">%d στοιχείου</item>
         <item quantity="other">%d στοιχεία</item>
     </plurals>
 
     <plurals name="deleting_items">
-        <item quantity="one">Διαγραφή %d στοιχείο</item>
+        <item quantity="one">Διαγραφή %d στοιχείου</item>
         <item quantity="other">Διαγραφή %d στοιχεία</item>
     </plurals>
 
@@ -145,7 +145,7 @@
     <!-- File properties -->
     <string name="properties">Ιδιότητες</string>
     <string name="path">Διαδρομή</string>
-    <string name="items_selected">Επολεγμένα στοιχεία</string>
+    <string name="items_selected">Επιλεγμένα στοιχεία</string>
     <string name="direct_children_count">Απευθείας καταμέτρηση παιδιών</string>
     <string name="files_count">Αριθμός συνολικών αρχείων</string>
     <string name="resolution">Ανάλυση</string>
@@ -223,8 +223,8 @@
     <string name="title">Τίτλο</string>
     <string name="filename">Όνομα αρχείου</string>
     <string name="extension">Επέκταση</string>
-    <string name="random">Random</string>
-    <string name="sort_randomly">Sort randomly</string>
+    <string name="random">Τυχαία</string>
+    <string name="sort_randomly">Τυχαία ταξινόμηση</string>
     <string name="ascending">Αύξουσα</string>
     <string name="descending">Φθίνουσα</string>
     <string name="use_for_this_folder">Χρήση μόνο για αυτόν το φάκελο</string>
@@ -380,7 +380,7 @@
     <string name="extra_large">Πολύ Μεγάλο</string>
     <string name="password_protect_hidden_items">Κωδικός προστασίας προβολής κρυφών στοιχείων</string>
     <string name="password_protect_whole_app">Κωδικός προστασίας  ολόκληρης της εφαρμογής</string>
-    <string name="password_protect_file_deletion">Password protect file deletion and moving</string>
+    <string name="password_protect_file_deletion">Προστασία με κωδικό για διαγραφή ή μετακίνηση</string>
     <string name="keep_last_modified">Διατηρήστε την παλιά τελευταία τροποποιημένη τιμή στην αντιγραφή/μετακίνηση/μετονομασία αρχείου</string>
     <string name="show_info_bubble">Εμφάνιση φυσαλίδας πληροφοριών κατά την κύλιση στοιχείων στη γραμμή κύλισης</string>
     <string name="prevent_phone_from_sleeping">Αποτροπή της αναστολής λειτουργίας του τηλεφώνου ενώ η εφαρμογή βρίσκεται στο προσκήνιο</string>
@@ -415,7 +415,7 @@
     <string name="files_restored_successfully">Τα αρχεία έχουν επαναφερθεί με επιτυχία</string>
     <string name="empty_recycle_bin_confirmation">Είστε βέβαιοι ότι θέλετε να αδειάσετε τον Κάδο Ανακύκλωσης; Τα αρχεία θα χαθούν οριστικά.</string>
     <string name="recycle_bin_empty">Ο Κάδος Ανακύκλωσης είναι κενός</string>
-    <string name="moving_recycle_bin_items_disabled">Moving Recycle bin items is disabled, please use Restore</string>
+    <string name="moving_recycle_bin_items_disabled">Η μετακίνηση στον Κάδο είναι ανενεργή, χρησιμοποιείστε την Επαναφορά</string>
 
     <plurals name="moving_items_into_bin">
         <item quantity="one">Μετακινήθηκε %d στοιχείο στον Κάδο</item>
@@ -491,16 +491,16 @@
     <string name="sunday_short">Κυρ</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro_long">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
-    <string name="it_is_free">It is free till: %s. If you download it till then, you will be able to use it for free forever.</string>
-    <string name="more_info">More info</string>
-    <string name="upgrade">Upgrade</string>
+    <string name="upgrade_to_pro_long">Αυτή η έκδοση της εφαρμογής δεν υποστηρίζεται πλέον. Αναβαθμίστε στην έκδοση Pro.</string>
+    <string name="it_is_free">Είναι δωρεάν μέχρι: %s. Εάν κάνετε λήψη μέχρι τότε, θα μπορείτε να την χρησιμοποιείτε δωρεάν για πάντα.</string>
+    <string name="more_info">Περισσότερα</string>
+    <string name="upgrade">Αναβάθμιση</string>
 
     <!-- About -->
     <string name="about">Σχετικά</string>
     <string name="website_label">Για τον κώδικα επισκεφθείτε</string>
     <string name="email_label">Στείλτε τα σχόλιά σας ή τις προτάσεις σας</string>
-    <string name="upgrade_to_pro">Upgrade to Pro</string>
+    <string name="upgrade_to_pro">Αναβάθμιση στην Pro</string>
     <string name="more_apps_underlined"><u>Περισσότερες εφαρμογές</u></string>
     <string name="third_party_licences_underlined"><u>Άδειες τρίτων</u></string>
     <string name="invite_friends_underlined"><u>Προσκαλέσετε φίλους</u></string>
