--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -22,7 +22,7 @@
     <string name="transparent">Transparant</string>
     <string name="transparent_color">Transparante kleur</string>
     <string name="select_a_different_color">Kies een andere kleur</string>
-    <string name="download">Download</string>
+    <string name="download">Downloaden</string>
 
     <!-- Favorites -->
     <string name="favorites">Favorieten</string>
@@ -401,10 +401,10 @@
     <string name="recycle_bin_cleaning_interval">Interval prullenbak leegmaken</string>
     <string name="empty_recycle_bin">Prullenbak leegmaken</string>
     <string name="force_portrait_mode">Portretmodus forceren</string>
-    <string name="export_settings">Export settings</string>
-    <string name="import_settings">Import settings</string>
-    <string name="settings_exported_successfully">Settings exported successfully</string>
-    <string name="settings_imported_successfully">Settings imported successfully</string>
+    <string name="export_settings">Instellingen exporteren</string>
+    <string name="import_settings">Instellingen importeren</string>
+    <string name="settings_exported_successfully">Instellingen geëxporteerd</string>
+    <string name="settings_imported_successfully">Instellingen geïmporteerd</string>
 
     <!-- Setting sections -->
     <string name="visibility">Opmaak</string>
@@ -550,7 +550,7 @@
 
     <string name="sideloaded_app">
         <![CDATA[
-            It looks like your app version is corrupt. Please download the original version <a href="%s">here</a>.
+            Het lijkt erop dat deze versie van de app corrupt is. Download de originele versie <a href="%s">hier</a>.
         ]]>
     </string>
 
