--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -615,7 +615,7 @@
     <string name="email_label">Zpětnou vazbu či návrhy zasílejte na</string>
     <string name="upgrade_to_pro">Stáhnout Pro verzi</string>
     <string name="more_apps_underlined"><u>Více aplikací</u></string>
-    <string name="more_apps_from_us_underlined"><u>More apps from us</u></string>
+    <string name="more_apps_from_us_underlined"><u>Více aplikací od nás</u></string>
     <string name="third_party_licences_underlined"><u>Licence třetích stran</u></string>
     <string name="invite_friends_underlined"><u>Pozvat přátele</u></string>
     <string name="share_text">Ahoj, podívej se na %1$s na %2$s</string>
