--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -33,7 +33,7 @@
     <string name="no_contacts_found">Контакты не найдены</string>
     <string name="request_the_required_permissions">Запрос необходимых разрешений</string>
     <string name="no_access_to_contacts">Приложение не может получить доступ к вашим контактам</string>
-    <string name="insert_text_here">Insert text here</string>
+    <string name="insert_text_here">Введите текст здесь</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Управление блокируемыми номерами</string>
@@ -249,7 +249,7 @@
     <string name="unhide_folder">Показать папку</string>
     <string name="temporarily_show_hidden">Временный показ скрытых</string>
     <string name="stop_showing_hidden">Не показывать скрытые медиа</string>
-    <string name="maximum_share_reached">Невозможно поделиться таким большим объёмом данных</string>
+    <string name="maximum_share_reached">Функция \"Поделиться\" не поддерживает такой большой объём данных</string>
     <string name="empty_and_disable_recycle_bin">Очистить и отключить корзину</string>
     <string name="undo">Отменить</string>
     <string name="redo">Повторить</string>
@@ -269,7 +269,7 @@
     <string name="sort_randomly">Случайный порядок</string>
     <string name="ascending">По возрастанию</string>
     <string name="descending">По убыванию</string>
-    <string name="use_for_this_folder">Использовать только для данной папки</string>
+    <string name="use_for_this_folder">Только для данной папки</string>
     <string name="sort_numeric_parts">Сортировать числовые части по их значению</string>
 
     <!-- Confirmation dialog -->
@@ -556,12 +556,12 @@
     <string name="exporting">Экспорт…</string>
     <string name="importing_successful">Импортирование выполнено успешно</string>
     <string name="exporting_successful">Экспортирование выполнено успешно</string>
-    <string name="importing_failed">Импортирование завершилось неудачей</string>
-    <string name="exporting_failed">Экспортирование завершилось неудачей</string>
-    <string name="importing_some_entries_failed">Импортирование некоторых элементов завершилось неудачей</string>
-    <string name="exporting_some_entries_failed">Экспортирование некоторых элементов завершилось неудачей</string>
-    <string name="no_entries_for_importing">Отсутствуют элементы для импортирования</string>
-    <string name="no_entries_for_exporting">Отсутствуют элементы для экспортирования</string>
+    <string name="importing_failed">Ошибка при импортировании</string>
+    <string name="exporting_failed">Ошибка при экспортировании</string>
+    <string name="importing_some_entries_failed">Ошибка при импортировании некоторых элементов</string>
+    <string name="exporting_some_entries_failed">Ошибка при экспортировании некоторых элементов</string>
+    <string name="no_entries_for_importing">Нечего импортировать</string>
+    <string name="no_entries_for_exporting">Нечего экспортировать</string>
 
     <!-- OTG devices -->
     <string name="usb">USB</string>
@@ -747,5 +747,5 @@
     <string name="pro_app_refund">Не забывайте, что если вы удалите любое платное приложение в течение 2 часов, вам будет автоматически возвращена сумма покупки. Если вы захотите вернуть деньги позднее, просто свяжитесь с нами по адресу hello@simplemobiletools.com и вы их получите. Так что можно легко опробовать это приложение :)</string>
 
     <!-- Description of our developer profile on Google Play, it can have max 140 characters -->
-    <string name="developer_description">A group of simple, open source Android apps with customizable widgets, without ads and unnecessary permissions.</string>
+    <string name="developer_description">Группа простых приложений для Android с открытым исходным кодом с настраиваемыми виджетами, без рекламы и ненужных разрешений.</string>
 </resources>
