--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -39,8 +39,8 @@
     <string name="manage_blocked_numbers">Управление блокируемыми номерами</string>
     <string name="not_blocking_anyone">Нет блокируемых номеров</string>
     <string name="add_a_blocked_number">Добавить блокируемый номер</string>
-    <string name="block_number">Блокируемый номер</string>
-    <string name="block_numbers">Блокируемые номера</string>
+    <string name="block_number">Блокировать номер</string>
+    <string name="block_numbers">Блокировать номера</string>
     <string name="blocked_numbers">Заблокированные номера</string>
     <string name="must_make_default_dialer">Вы должны сделать \"Simple Contacts\" приложением по умолчанию для набора номера, чтобы использовать блокировку номеров.</string>
     <string name="set_as_default">Установить по умолчанию</string>
@@ -542,12 +542,12 @@
     <string name="migrating">Перенос</string>
 
     <!-- Default tabs to open -->
-    <string name="default_tab_to_open">Tab to open at app start</string>
-    <string name="contacts_tab">Contacts</string>
-    <string name="favorites_tab">Favorites</string>
-    <string name="call_history_tab">Call History</string>
-    <string name="groups_tab">Groups</string>
-    <string name="last_used_tab">Last used one</string>
+    <string name="default_tab_to_open">Открываемая при запуске вкладка</string>
+    <string name="contacts_tab">Контакты</string>
+    <string name="favorites_tab">Избранное</string>
+    <string name="call_history_tab">История вызовов</string>
+    <string name="groups_tab">Группы</string>
+    <string name="last_used_tab">Последняя использованная</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Восстановить этот файл</string>
@@ -726,9 +726,9 @@
     <string name="gallery_short">Галерея</string>
     <string name="music_player_short">Проигрыватель музыки</string>
     <string name="notes_short">Заметки</string>
-    <string name="sms_messenger_short">SMS Messenger</string>
+    <string name="sms_messenger_short">Сообщения</string>
     <string name="thank_you_short">Спасибо</string>
-    <string name="voice_recorder_short">Voice Recorder</string>
+    <string name="voice_recorder_short">Диктофон</string>
 
     <string name="sideloaded_app">
         <![CDATA[
